# backtesting-engine-1

./: .env.example  Dockerfile  README.md  aapl-validated.md  abbv-validated.md  aem-validated.md  alab-validated.md  amat-validated.md  amd-validated.md  amt-validated.md  amzn-validated.md  aph-validated.md  avav-validated.md  awk-validated.md  bep-validated.md  brk.b-validated.md  cat-validated.md  cb-validated.md  ccj-validated.md  ceg-validated.md  chd-validated.md  cl-validated.md  cop-validated.md  copx-validated.md  cost-validated.md  crm-validated.md  crwd-validated.md  cvx-validated.md  cwen-validated.md  d-validated.md  docker-compose.yml  energy-bc-comparison.md  eog-validated.md  epd-validated.md  eqnr-validated.md  et-validated.md  etn-validated.md  ewy-validated.md  fang-validated.md  fcx-validated.md  (+103 more)
.github/workflows/: build-backtesting-service.yml
backtesting/: __init__.py  __main__.py  config.py  main.py
backtesting/analyzers/: __init__.py  metrics.py  trade_logger.py
backtesting/data/: __init__.py  timescale_loader.py
backtesting/engine/: __init__.py  backtrader_runner.py  data_feed.py  sizer.py
scripts/: backfill_vix.py
tests/: conftest.py  test_backtrader_runner.py  test_bootstrap.py  test_config.py  test_console_report.py  test_data_feed.py  test_indicator_parity.py  test_json_report.py  test_lookahead.py  test_metrics.py  test_monte_carlo.py  test_pandas_ta_bridge.py  test_regime.py  test_sizer.py  test_strategy_factory.py  test_trade_logger.py  test_validation_report.py  test_walk_backward.py  test_walk_forward.py
(+26 files in other folders)
